--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'koin'
 }
 
 android {
@@ -9,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.junho.voicecall"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -30,6 +33,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -50,5 +57,39 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+
+    // Koin for Kotlin
+    implementation "org.koin:koin-core:$koin_version"
+
+// Koin Extended & experimental features
+    implementation "org.koin:koin-core-ext:$koin_version"
+
+// Koin for Unit tests
+    testImplementation "org.koin:koin-test:$koin_version"
+
+    //koin
+    // Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+// Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+// Koin AndroidX Fragment features
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+// Koin AndroidX WorkManager
+    implementation "org.koin:koin-androidx-workmanager:$koin_version"
+// Koin AndroidX Jetpack Compose
+    implementation "org.koin:koin-androidx-compose:$koin_version"
+// Koin AndroidX Experimental features
+    implementation "org.koin:koin-androidx-ext:$koin_version"
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.2'
+    implementation "com.squareup.retrofit2:converter-gson:2.8.2"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.1"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation "com.squareup.retrofit2:retrofit-mock:2.4.0"
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.7.1'
 
 }
