--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.koin_version = "2.2.2"
     repositories {
         google()
         jcenter()
@@ -11,6 +12,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //koin
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
     }
 }
 
